add api level template crud
